--- a/src/app.css
+++ b/src/app.css
@@ -52,6 +52,10 @@ body{
   border-right: 1px solid var(--black);
 }
 
+.create-link{
+  display: none;
+}
+
 .create-link:hover{
   padding-right: 20px;
   border-right: 1px solid var(--black);
