--- a/src/pages/Home/styleHome.css
+++ b/src/pages/Home/styleHome.css
@@ -27,6 +27,11 @@
     padding-bottom: 60px;
 }
 
+
+#data-image{
+    width: 100%;
+}
+
 .data-title{
     font-size: 18pt;
     padding-bottom: 50px;
@@ -34,6 +39,12 @@
     color: black;
     font-weight: 600;
     transition: 0.5s;
+    padding-top: 20px;
+}
+
+#data-title-text{
+    border-bottom: 1px solid var(--black);
+    padding-bottom: 20px;
 }
     .data-title:hover{
         padding-left: 10px;
@@ -44,10 +55,15 @@
     padding-bottom: 25px;
    font-weight: 450;
    font-size: 12pt;
-   white-space: pre-line;
-
-   
+   white-space: pre-line;   
 }
+
+#link-seemore{
+    text-decoration: none;
+    font-weight: 700;
+    color: var(--primary)
+}
+
 .data-author{
     padding-bottom: 25px;
     font-weight: 700;
