--- a/src/pages/PostDetail/style.css
+++ b/src/pages/PostDetail/style.css
@@ -9,6 +9,11 @@
   grid-template-columns: 2fr 3fr;
 }
 
+.post-col2{
+  padding-left: 50px;
+  
+}
+
 @media screen and (max-width: 750px) {
   .post-container {
     display: grid;
