--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,14 @@
 :root{
-  --black: rgb(35,35,35);
-  --primary: var(black);
+  --text: var(--black);
+  --background: var(--white);
+  --black : rgb(35,35,35);
+  --white : rgb(256,256,256);
 }
 
 body{
  padding: 20px;
- background-color: 	rgb(255,255,245);
- color: var(--black);
+ background-color: var(--background);
+ color: var(--text);
 }
 
 .dashboard{
@@ -27,7 +29,7 @@ body{
 
 .blog-name{
   font-size: 22pt;
-  color: var(--black); 
+  color: var(--text); 
   text-decoration: none;
   transition: 0.5s;
 }
@@ -37,7 +39,7 @@ body{
 
 .home-link, .create-link, .login-link{
   text-decoration: none;
-  color: var(--black);
+  color: var(--text);
   font-size: 18pt;
   cursor: pointer;
   transition: 0.5s;
@@ -45,12 +47,12 @@ body{
 
 .login-link:hover{
   padding-right: 20px;
-  border-right: 1px solid var(--black);
+  border-right: 1px solid var(--text);
 }
 
 .home-link:hover{
   padding-right: 20px;
-  border-right: 1px solid var(--black);
+  border-right: 1px solid var(--text);
 }
 
 .create-link{
@@ -59,7 +61,7 @@ body{
 
 .create-link:hover{
   padding-right: 20px;
-  border-right: 1px solid var(--black);
+  border-right: 1px solid var(--text);
 }
 
 .dashboard-menu{
