--- a/src/pages/CreatePage/style.css
+++ b/src/pages/CreatePage/style.css
@@ -32,3 +32,12 @@ input{
     width: 20%;
     gap: 20px;
 }
+
+#publish-submit{
+    background-color: var(--text);
+    color: var(--background);
+    font-weight: 800;
+    border-radius: 15%;
+    border: none;
+    padding: 8px 15px;
+}
