--- a/src/pages/Home/styleHome.css
+++ b/src/pages/Home/styleHome.css
@@ -36,14 +36,14 @@
     font-size: 18pt;
     padding-bottom: 50px;
     text-decoration: none;
-    color: black;
+    color: var(--text);
     font-weight: 600;
     transition: 0.5s;
     padding-top: 20px;
 }
 
 #data-title-text{
-    border-bottom: 1px solid var(--black);
+    border-bottom: 1px solid var(--text);
     padding-bottom: 20px;
 }
     .data-title:hover{
@@ -61,7 +61,7 @@
 #link-seemore{
     text-decoration: none;
     font-weight: 700;
-    color: var(--primary)
+    color: var(--text)
 }
 
 .data-author{
@@ -71,6 +71,8 @@
 .data-date{
     font-size: 12pt;
     font-style: italic;
+    font-weight: 800;
+    padding-bottom: 10px;
 }
 
 .btn-container{
