--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,16 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+@import "@fontsource/roboto/300.css";
+@import "@fontsource/roboto/400.css";
+@import "@fontsource/roboto/500.css";
+@import "@fontsource/roboto/700.css";
+
 :root{
   --text: var(--black);
   --background: var(--white);
   --black : rgb(35,35,35);
   --white : rgb(256,256,256);
 }
+
 
 body{
  padding: 20px;
