--- a/src/pages/CreatePage/style.css
+++ b/src/pages/CreatePage/style.css
@@ -46,6 +46,10 @@ input{
     padding: 8px 15px;
 }
 
+#publish-submit:hover{
+    opacity: 0.7;
+}
+
 #alert-mui{
     position: fixed;
     top: 20px;
